--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-INDEX TEST!
-
-GH-PAGES TEST
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+	<meta charset="UTF-8">
+	<meta name="author" content="Mizael Web Dev">
+	<meta name="Description" content="Framework para quem quer criar aplicações e não tem tempo de criar css!">
+	<title>Flex | Simplesmente Css</title>
+	<link rel="stylesheet" href="css/flex.css">
+</head>
+<body>
+		<h1>
+			<span class="fontello-heart"></span>Ola Mundo! 01
+		</h1>
+		<p> Ola eu sou um p Este aqui foi!</p>
+</body>
+</html>
